# hololight

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
examples/: fbcsp_dev.ipynb  plot_bcic_iv_2a_moabb_cropped (1).ipynb  test_hue.py
frontend/: frontend.html  hit-test.html  serve.py
frontend/assets/: lightbulb.gltf
hololight/: bci.py  eegsynth.py  go_task.py  hololight.py  hololightsystem.py  hue.py  hue_demo.py  joyrec_viz.py  messagelogger.py  modeltraining.py  plotter.py  preprocessing.py  sampler.py  serialize.py  shallowfbcspdecoder.py  shallowfbcspnet.py  shallowfbcsptraining.py  stamped_websocket_server.py  train.py  training_page.html
hololight/frontend/: demo.py
hololight/frontend/web/: index.html
hololight/training/: go-task-2022-07-16--14_07.study.json  go-task.study.json  server.py
hololight/training/web/: script.js
