[metadata]
name = ezbci
version = 0.0.1
author = Griffin Milsap
author_email = griffin.milsap@jhuapl.edu
description = BCI tools and implementations in ezmsg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.jhuapl.edu/milsagw1/ezbci
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
