[metadata]
name = hololight
version = 0.0.1
author = Griffin Milsap
author_email = griffin.milsap@jhuapl.edu
description = Holographic Lightbulb BCI 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/griffinmilsap/hololight
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
	ezmsg
	ezmsg-sigproc
	ezmsg-eeg
	ezmsg-websocket
	numpy
	torch
	phue
